@@ -1,3 +1,7 @@
+2007-04-25  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-compat.el (try-complete-abbrev): don't expand a snippet inside comments or strings.
+
 2007-04-20  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails-core.el (rails-core:menu-letters-list)
